Modification fansite2.html
Mise à jour du code de la galerie

--- a/fansite2.html
+++ b/fansite2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -58,7 +57,7 @@
         <!-- Section des Réalisations -->
         <div class="realisation" id="realisation">
             <h2>Réalisation</h2>
-            <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-c.jpg" alt="Comics2" width="200"/></p>
+            <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-c.jpg" alt="C'est la couvertur du Batman no1 qui le représente avec robine se balancent sur une corde." width="200"/></p>
             <p>Comic: Créé par l'écrivain Bill Finger et l'artiste Bob Kane, 
                 Batman est apparu pour la première fois dans Detective Comics #27 (1939) 
                 et est l'identité secrète de Bruce Wayne , qui, après avoir été témoin du meurtre de ses parents alors qu'il était enfant,
@@ -66,14 +65,16 @@
                 afin de combattre le crime.</p>
             <div style="clear:both"></div>
 
-            <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-sa3.jpg" alt="serie1" width="200"/></p>
+            <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-sa3.jpg" alt="Batman se tient au centre d'une ville rouge illuminée par le Bat-Signal,
+                                      entouré de gratte-ciel affichant des images de ses alliés et ennemis emblématiques." width="200"/></p>
             <p>Série d'animation: Batman (Batman: The Animated Series ou BTAS) est une série télévisée américaine d'animation
                  en 85 épisodes de 22 minutes, créée par Bruce Timm et Eric Radomski diffusée entre le 5 septembre 1992 
                  et le 15 septembre 1995 dans le bloc de programmation Fox Kids sur le réseau Fox, 
                  puis rediffusée dans le bloc Kids' WB sur le réseau The WB.</p>
             <div style="clear:both"></div>
 
-            <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-f.jpg" alt="Film2" width="200"/></p>
+            <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-f.jpg" alt="Une des affiche promotionnel du film 'The Batman' elle est principalement rouge 
+                                      avec la silhouette de batement en noir." width="200"/></p>
             <p>Film The Batman:
                 2 mars 2022 en salle | 2h 57min | Action, Policier, Thriller
                 Date de reprise 30 août 2024
@@ -81,7 +82,8 @@
                 Avec Robert Pattinson, Zoë Kravitz, Paul Dano</p>
             <div style="clear:both"></div>
 
-                <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-j.jpg" alt="jeux1" width="200"/></p>
+                <p style="float:left"><img src="C:\Users\fatyl\Downloads\Batman\Images\Batman-j.jpg" alt="L'affiche du jeu Batman Arkham Shadow. 
+                                          on y voit Batman de face avec une lumière vive dans le dos" width="200"/></p>
                 <p>Jeux: Batman: Arkham est une série de jeux vidéo créée par Rocksteady Studios s'inscrivant dans l'univers de Batman.</p>
                 <div style="clear:both"></div>
         </div>
@@ -105,11 +107,18 @@
         <div class = galerie id="galerie">
         <H2>Galerie</H2>
             <div class="conteneur_mosaique">
-                <img class="imagemosaique1" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-c1.jpg" height="200" width="200" alt="image1">
-                <img class="imagemosaique2" src="C:\Users\fatyl\Downloads\Batman\Images\Detective-Comics-1070-2.jpg" height="200" width="200" alt="image2">
-                <img class="imagemosaique3" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-s3.jpg" height="200" width="200" alt="image3">
-                <img class="imagemosaique4" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-4.jpg" height="200" width="200" alt="image4">
-                <img class="imagemosaique5" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-m3.jpg" height="200" width="200"  alt="image5">
+                <img class="imagemosaique1" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-c1.jpg" 
+                    height="200" width="200" alt="La couverture du comics 'Batman City of Madness',
+                    on y voit Batmant attrapé par des tentacules, la tete a l'envert.">
+                <img class="imagemosaique2" src="C:\Users\fatyl\Downloads\Batman\Images\Detective-Comics-1070-2.jpg" 
+                    height="200" width="200" alt="On y voit Batman debout et Talia Al Ghul a genoux pret a afronter une menace">
+                <img class="imagemosaique3" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-s3.jpg" 
+                    height="200" width="200" alt="Batman se tient sur une enseigne geante rouge de Gotham, surlombant la ville en plein nuit.">
+                <img class="imagemosaique4" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-4.jpg" 
+                    height="200" width="200" alt="Batman, imposant et menaçant, se dresse au-dessus d’un orgue monumental illuminé d’une lumière dorée,
+                    entouré de figures mystérieuses en robe sombre, avec une grande cape déployée formant une silhouette intimidante">
+                <img class="imagemosaique5" src="C:\Users\fatyl\Downloads\Batman\Images\Batman-m3.jpg" 
+                    height="200" width="200"  alt="Il s'agit de l'affiche du film 'The Batman'. ">
                 </div>
     
         </ul>
